--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,12 @@
   text-align: center;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
